--- a/Matricula.csproj
+++ b/Matricula.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormAB.Designer.cs">
       <DependentUpon>FormAB.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormABC_view.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormABC_view.Designer.cs">
+      <DependentUpon>FormABC_view.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAC.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAB.resx">
       <DependentUpon>FormAB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormABC_view.resx">
+      <DependentUpon>FormABC_view.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormAC.resx">
       <DependentUpon>FormAC.cs</DependentUpon>
